Add XSS sanitization and versioning to user profile management
- Introduced jsoup dependency for robust XSS cleaning in user inputs.
- Enhanced UserController to enforce authentication on profile retrieval and updates, adding ETag support for optimistic locking.
- Updated MeResponse and User models to include a version field for managing concurrent updates.
- Refactored MeService to handle JSON merge patch requests and validate versioning during profile updates.
- Improved XssSanitizer to utilize jsoup for sanitization and added control character stripping.
- Expanded unit and integration tests to cover new functionalities and ensure proper behavior of user profile management.